# LLM-Usage-In-Science

./: .gitignore  README.md  paper.tex  pyproject.toml  run_01_ai_assisted_non_english_core.py  run_02_mapping_increasing_use_core.py  run_03_quantifying_usage_core.py
config/: models.yaml
requirements/: requirements-llm-swap.txt  requirements-official.txt
results/: 01_ai_assisted_non_english_core.csv  02_mapping_increasing_use_core.csv  03_quantifying_usage_core.csv  official_cs_validation.csv  synthetic_validation.csv
src/core/: __init__.py  distributional_llm_reproduction.py  paths.py  reproduction_common.py  tokenization.py
src/data_tools/: __init__.py  collect_arxiv_human.py  collect_biorxiv_human.py  download_official_cs_data.sh  download_official_inference_data.py  inspect_official_vocab.py
src/llm_swap/: __init__.py  build_ai_corpus.py  fit_swapped_distribution.py  human_corpus.py  llm_models.py  run_llm_swap.py
src/reproduction/: __init__.py  official_cs_validation.py
